infra/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kumbi-ingress
  namespace: kumbi
  annotations:
    # Triggers cert-manager to create a certificate
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Redirects all http (80) traffic to https (443)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kumbike.org
    - www.kumbike.org
    - trace.kumbike.org
    - vote.kumbike.org
    - oops.kumbike.org
    - dev.kumbike.org
    secretName: kumbi-tls-cert
  rules:
  - host: kumbike.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
